--- a/student_09/index.html
+++ b/student_09/index.html
@@ -20,9 +20,13 @@
 <h1>
 If you want to see a Thanksgiving page <a href = "thanksgiving.html"> Press Me! </a></li>
 </h1>
-<h2> poeple who are viewing this are poeple who have nothing to do ;) If you not Bored plz leave :I </h2>
+<h2> poeple who are viewing this are poeple who have nothing to do ;) If you not Bored plz leave :I Totally bieng serious there</h2>
 <h3>Welcome bordies here you will learn about me a fellow memeber of your team :) but letting you know ....</h3>
-<p>This is the <b>coolest</b> site ever!</p>
+<h4>This is the <b>coolest</b> site ever! only if you didn't already know :) Which you should've :( </h4>
+<h5>So..... to see if you really are a bordy or not you have to take a test. Not Literary tho :) </h5>
+<h6>Raed this number 847.98765345789008760 * 107.6865678757869</h6>
+<h7>AHAAAA! I caught you. you read the entire thing didn't you ? you have dishonored us '-'. You should be ashamed. NOT!</h7>
+<h8>Congrats you have discovered your secret talent: Intillegance. I've got some too you know i could even spell it. I T see i can spell too</h8>
 <footer>
 Created by Me!
 </footer>
