--- a/student_17/index.html
+++ b/student_17/index.html
@@ -9,14 +9,14 @@
 /* Create two unequal columns that floats next to each other */
 .column {
   float: left;
-  padding: 10px;
+  padding: 50px;
   height: 300px; /* Should be removed. Only for demonstration */
 }
 .left {
-  width: 25%;
+  width: 50%;
 }
 .right {
-  width: 75%;
+  width: 50%;
 }
 /* Clear floats after the columns */
 .row:after {
@@ -28,11 +28,11 @@
 </head>
 <body>
   <div class="row">
-  <div class="column left" style="background-color:#aaa;">
+  <div class="column left" style="background-color:#bba;">
     <h2>Column 1</h2>
     <p>Yo sup flex tup</p>
   </div>
-  <div class="column right" style="background-color:#bbb;">
+  <div class="column right" style="background-color:#aah;">
     <h2>Column 2</h2>
     <p>I dunno wa else to say so CRAKY</p>
   </div>
