--- a/student_02/index.html
+++ b/student_02/index.html
@@ -34,11 +34,11 @@
 <div class="row">
   <div class="column left" style="background-color:#aaa;">
     <h2>Column 1</h2>
-    <p>Jello persona yo wasap</p>
+    <p> Hello </p>
   </div>
   <div class="column right" style="background-color:#bbb;">
     <h2>Column 2</h2>
-    <p>Anoher wassap I dunno wa else to se</p>
+    <p>Hi kids</p>
   </div>
 </div>
 <head>
