--- a/student_15/index.html
+++ b/student_15/index.html
@@ -10,6 +10,17 @@
   <h1> Your Best Dream </h1>
 </header>
 <nav>
+  .column {
+  float: left;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+.left {
+  width: 25%;
+}
+.right {
+  width: 75%;
+}
   <ul><div class="row">
   <div class="column left" style="background-color:#aaa;">
     <h2>Column 1</h2>
