--- a/student_14/index.html
+++ b/student_14/index.html
@@ -20,5 +20,17 @@
 <footer>
 Created by Hajime Inc. 
   </footer>
+  
+<div class="row">
+  <div class="column left" style="background-color:#aaa;">
+    <h2>Column 1</h2>
+    <p>Jello persona yo wasap</p>
+  </div>
+  <div class="column right" style="background-color:#bbb;">
+    <h2>Column 2</h2>
+    <p>Anoher wassap I dunno wa else to se</p>
+  </div>
+</div>
+
 </body>
 </html>
