--- a/student_17/about.html
+++ b/student_17/about.html
@@ -8,7 +8,7 @@
 <body>
 <header>
   <h1>
-I have nohing to tell you about me
+I have nohing to tell you about me - My name is Eeevvvvaaannn
   </h1> 
 </header>
 <nav>
