--- a/student_17/about.html
+++ b/student_17/about.html
@@ -20,14 +20,13 @@ I have nohing to tell you about me - My name is Eeevvvvaaannn
   </ul>
   <a href = "/">
      <img src = "https://cdn2.unrealengine.com/Fortnite%2FBattle-pass%2FSeason-7%2FBR07_Web_BattleBundle-601x401-643f37a393b6334c1c1a437eb62d99c3ca307173.png">
-    <img scr ="https://cdn2.unrealengine.com/Fortnite%2FBattle-pass%2FSeason-7%2FBR07_Web_BattlePass-635x401-939032decb421e3c1426dfd97a9f91f2af07d60e.png">
-   <img scr ="https://i.ytimg.com/vi/1osOkUluiVE/hqdefault.jpg">
+
   </a>
 </nav>
 <footer>
 Created by thatonedude zombs royale name 11 dubs btw. 6 solo 3 squad and 2 duo wins. leaderboard bro
   
- Also crated by Hightower incorporated "YOur job is our job, especially if it is involved with fortnite or Phil Swift!"
+ Also crated by Hightower incorporated "Your job is our job, especially if it is involved with fortnite or Phil Swift!"
 </footer>
 </body>
 </html>
