--- a/student_17/about.html
+++ b/student_17/about.html
@@ -8,7 +8,7 @@
 <body>
 <header>
   <h1>
-I have nohing to tell you about me - My name is Eeevvvvaaannn
+I have nohing to tell you about me because people can hack my personal info. so thre
   </h1> 
 </header>
 <nav>
@@ -22,6 +22,9 @@ I have nohing to tell you about me - My name is Eeevvvvaaannn
      <img src = "https://cdn2.unrealengine.com/Fortnite%2FBattle-pass%2FSeason-7%2FBR07_Web_BattleBundle-601x401-643f37a393b6334c1c1a437eb62d99c3ca307173.png">
 
   </a>
+  <h2>
+    My name is Jhon Cena- sike my name is Evan Hightower-Rojas
+  </h2>
 </nav>
 <footer>
 Created by thatonedude zombs royale name 11 dubs btw. 6 solo 3 squad and 2 duo wins. leaderboard bro
