--- a/student_13/contact.html
+++ b/student_13/contact.html
@@ -7,7 +7,7 @@
 <a href= "/">
 <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_8thera8-VHBTEvitk9KuxyFvUEJg3HcwUP1d_3lnBD5uvLPe "/>
 </a>
-<h1> The Internet Club </h1>
+<h1> Get Free V-Bucks Here </h1>
 </header>
 <nav>
   <ul>
