--- a/student_28/about.html
+++ b/student_28/about.html
@@ -14,6 +14,7 @@
 
 <body>
 
+<img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/full/public/2018/05/24/who-gloria-borger.jpg" alt="Gloria" height="42" width="42">
 
 
 
