--- a/student_16/AboutMe.html
+++ b/student_16/AboutMe.html
@@ -6,6 +6,7 @@
 <header>
   <a href = "/">
     <img scr = "https://www.google.com/imgres?imgurl=https%3A%2F%2Fi.ytimg.com%2Fvi%2FxIuaacLbOVU%2Fmaxresdefault.jpg&imgrefurl=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DxIuaacLbOVU&docid=3QCv_UxTU0hs5M&tbnid=Dfwjqg9dVFB0WM%3A&vet=10ahUKEwiujJXa_vDfAhWEAnwKHWF3AtAQMwhMKAEwAQ..i&w=1280&h=720&bih=969&biw=1920&q=phil%20swift%20fortnite&ved=0ahUKEwiujJXa_vDfAhWEAnwKHWF3AtAQMwhMKAEwAQ&iact=mrc&uact=8"
+          <img scr = "https://scontent-amt2-1.cdninstagram.com/vp/894f564a13ca560fe5115dbb488cdfb0/5CECE836/t51.2885-15/e35/50302312_315934139269980_1592980250373171104_n.jpg?_nc_ht=scontent-amt2-1.cdninstagram.com"
          <img scr = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjW8fvo_vDfAhVollQKHTFPBSgQjRx6BAgBEAU&url=https%3A%2F%2Fknowyourmeme.com%2Fmemes%2Fyeet&psig=AOvVaw12xFYOoXd1CHGScQQLBO6g&ust=1547683046693926"
   </a>
   <h1> The Lit Boii Meme Yeet Oof LOL </h1>
@@ -16,9 +17,14 @@
    <li><a href = "Gallery.html> About Me(mes) </a></li>
    <li><a href = "Contact.html> Contact Us </a></li>
   </ul>
+       <ol>
+       <li>https://www.youtube.com/channel/UC8RhQpc7HB_GXPI_1hRAqzA</li>
+       <li>https://insta-stalker.com/profile/pandagamer258k9/#instagram-story</li>
+       <li>https://www.youtube.com/channel/UC-lHJZR3Gqxm24_Vd_AJ5Yw</li>
+       </ol>
   </nav>
   <footer>
-  #PressFToPayYourRespects #RipInTheChat #DamianLeftTheChat #SubToPewdiepie # Lol i maYT: PandaGamer258K9
-  </footer>de this Damian Michael Hernandez SC: PandaGamer258K9 IG:@pandagamer258k9 
+  #PressFToPayYourRespects #RipInTheChat #DamianLeftTheChat #SubToPewdiepie # Lol i m8 boii
+  </footer>de this Damian Michael Hernandez YT: PandaGamer258K9SC: PandaGamer258K9 IG:@pandagamer258k9 
 </body>
 </html>
