--- a/student_14/about.html
+++ b/student_14/about.html
@@ -17,6 +17,10 @@
     <li><a href = "contact.html"> Contact Us </a></li>
   </ul>
 </nav>
+  <marquee> California Rolls is NOT a Sushi (That also includes Dragon Rolls, Spicy Tuna Rolls, Cruchy Rolls etc. </marquee>
+<par>
+  Hewo~ uwu~, I'm Hajime, Life sucks lol, that's all I have for you...
+</par>
 <footer>
 Created by Hajime Inc. 
 </footer>
