--- a/student_13/about.html
+++ b/student_13/about.html
@@ -32,11 +32,11 @@
 <div class="row">
   <div class="column left" style="background-color:#aaa;">
     <h2>Column 1</h2>
-    <p>Some text..</p>
+    <p>Here you can get free v-bucks! </p>
   </div>
   <div class="column right" style="background-color:#bbb;">
     <h2>Column 2</h2>
-    <p>Some text..</p>
+    <p> And get "advice" on how to be a pro! </p>
   </div>
 </div>
 
