--- a/student_15/about.html
+++ b/student_15/about.html
@@ -2,8 +2,7 @@
 <html>
 <head>
   <link rel= "Styleheet" type "txt/css" href= "mystyle.css">
-<title>Henry Guske/About me
-</title>
+<title>About me</title>
 <style type="text/css">
 body{
 border-style: dashed;
@@ -12,22 +11,20 @@ border-color: red;
 background-color: yellow;
 }
 </style>
-
-<h2>About Me<h2
+<img src="https://img.buzzfeed.com/buzzfeed-static/static/2016-12/14/13/asset/buzzfeed-prod-fastlane01/sub-buzz-24232-1481739559-7.jpg">
+<h2>Henry Guske<h2
 </head>
 <body>
 You will soon learn that pineapple on pizza is the best pizza. If you get the chance don't read Hajimes website because he does't like pineapple on pizza (this could scar you forever).
-
 <p>
 This is my favorite video <a href= "http://www.youtube.com/watch?v=HCckoploKxg"> Hope you like pineapple on pizza </a>
 </p>
 <h3>My favorite foods:</h3>
 <ol>
-<li>Sushi</li>
 <li>Red Meat</li>
-<li>Pineapple on N TNTFGFG HTR</li>
-<li>pineapple on pizza</li>
-<img src="https://img.buzzfeed.com/buzzfeed-static/static/2016-12/14/13/asset/buzzfeed-prod-fastlane01/sub-buzz-24232-1481739559-7.jpg">
+<li>Pineapple on Pizza</li>
+<li>pineapple on Pizza</li>
+<li>Sushi</li>
 </ol>
 <h3>My favorite video games of all time:</h3>
 <ul>
@@ -35,5 +32,7 @@ This is my favorite video <a href= "http://www.youtube.com/watch?v=HCckoploKxg">
 <li>Clash Royale</li>
 <li>Minecraft</li>
 </ul>
+  
+<marquee>This is made by Hank.inc a Pineapple on Pizza company</marquee>
 <body>
 </html>
