--- a/student_15/about.html
+++ b/student_15/about.html
@@ -12,7 +12,7 @@ background-color: yellow;
 }
 </style>
 <img src="https://img.buzzfeed.com/buzzfeed-static/static/2016-12/14/13/asset/buzzfeed-prod-fastlane01/sub-buzz-24232-1481739559-7.jpg">
-<h2>Henry Guske<h2
+<h2>Henry Guske</h2>
 </head>
 <body>
 You will soon learn that pineapple on pizza is the best pizza. If you get the chance don't read Hajimes website because he does't like pineapple on pizza (this could scar you forever).
