--- a/student_17/about.html
+++ b/student_17/about.html
@@ -25,6 +25,10 @@ I have nohing to tell you about me because people can hack my personal info. so 
   <h2>
     My name is Jhon Cena- sike my name is Evan Hightower-Rojas
   </h2>
+  <h3>
+    Yo, yo, yo, yo, yo, howsit dowin chups I have a good life this image should say it all.
+    <img src = "https://media.tenor.com/images/5aa61ab3a7a32cbcb88771984b7be8ca/tenor.gif">
+  </h3> 
 </nav>
 <footer>
 Created by thatonedude zombs royale name 11 dubs btw. 6 solo 3 squad and 2 duo wins. leaderboard bro
