--- a/student_15/about.html
+++ b/student_15/about.html
@@ -11,6 +11,7 @@ border-color: red;
 background-color: yellow;
 }
 </style>
+  <h1>About Me</h1>
 <img src="https://img.buzzfeed.com/buzzfeed-static/static/2016-12/14/13/asset/buzzfeed-prod-fastlane01/sub-buzz-24232-1481739559-7.jpg">
 <h2>Henry Guske</h2>
 </head>
@@ -23,7 +24,7 @@ This is my favorite video <a href= "http://www.youtube.com/watch?v=HCckoploKxg">
 <ol>
 <li>Red Meat</li>
 <li>Pineapple on Pizza</li>
-<li>pineapple on Pizza</li>
+<li>Pineapple on Pizza</li>
 <li>Sushi</li>
 </ol>
 <h3>My favorite video games of all time:</h3>
