--- a/student_17/about.html
+++ b/student_17/about.html
@@ -28,6 +28,7 @@ I have nohing to tell you about me because people can hack my personal info. so 
   <h3>
     Yo, yo, yo, yo, yo, howsit dowin chups I have a good life this image should say it all.
     <img src = "https://media.tenor.com/images/5aa61ab3a7a32cbcb88771984b7be8ca/tenor.gif">
+     <img src = "https://thumbs.gfycat.com/IlliterateImpartialCarpenterant-max-1mb.gif">
   </h3> 
 </nav>
 <footer>
