--- a/student_14/about.html
+++ b/student_14/about.html
@@ -9,6 +9,7 @@
   </a>
   <h1> Welcome... I guess... </h1>
 </header>
+  <h2> California Rolls are NOT Sushi </h2>
 <nav>
   <ul>
     <li><a href = "index.html"> Home </a></li>
@@ -16,13 +17,10 @@
     <li><a href = "gallery.html"> Gallery </a></li>
     <li><a href = "contact.html"> Contact Us </a></li>
   </ul>
-</nav>
-  <marquee> California Rolls is NOT a Sushi (That also includes Dragon Rolls, Spicy Tuna Rolls, Cruchy Rolls etc. </marquee>
-<par>
-  Hewo~ uwu~, I'm Hajime, Life sucks lol, that's all I have for you...
-</par>
+  </nav>
 <footer>
 Created by Hajime Inc. 
 </footer>
 </body>
+<marquee>  </marquee>
 </html>
