--- a/example/index.html
+++ b/example/index.html
@@ -17,6 +17,9 @@
     <li><a href = "contact.html"> Contact Us </a></li>
   </ul>
 </nav>
+ <iframe width="420" height="315"
+src="https://www.youtube.com/watch?v=rv8UnA_1Os8">
+</iframe>
 <footer>
 Created by Me!
 </footer>
