--- a/example/index.html
+++ b/example/index.html
@@ -18,7 +18,7 @@
   </ul>
 </nav>
  <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=rv8UnA_1Os8">
+src="https://www.youtube.com/embed/v=rv8UnA_1Os8">
 </iframe>
 <footer>
 Created by Me!
