--- a/student_28/about.html
+++ b/student_28/about.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/full/public/2018/05/24/who-gloria-borger.jpg" alt="Gloria" height="42" width="42">
+<img src="https://www.gannett-cdn.com/presto/2018/12/26/USAT/89562d29-b653-477e-b702-b718787b75ac-sniffles2.jpg?width=534&height=712&fit=bounds&auto=webp" alt="REEEEEEEEE" height="42" width="42">
 
 
 
@@ -57,7 +57,7 @@
 
   <br><br>
 
-  <p>We like to code and teach coding to you!!</p>
+  <p>howdy manne i cant sniff ,':l i wanna go skate. bye!</p>
 
 </body>
 
