--- a/student_15/about.html
+++ b/student_15/about.html
@@ -16,7 +16,7 @@ background-color: yellow;
   <h1>About Me</h1>
 <img src="https://img.buzzfeed.com/buzzfeed-static/static/2016-12/14/13/asset/buzzfeed-prod-fastlane01/sub-buzz-24232-1481739559-7.jpg">
 <h2>Henry Guske</h2>
-You will soon learn that pineapple on pizza is the best pizza. If you get the chance don't read Hajimes website because he does't like pineapple on pizza (this could scar you forever).
+I grew up a rich white kid.
 <p>
 This is my favorite video <a href= "http://www.youtube.com/watch?v=HCckoploKxg"> Hope you like pineapple on pizza </a>
 </p>
