--- a/student_14/about.html
+++ b/student_14/about.html
@@ -18,10 +18,10 @@
     <li><a href = "contact.html"> Contact Us </a></li>
   </ul>
   </nav>
-  <p> Hey! I'm Hajime... That's all I got. </p>
+  <p> Hey! I'm Jimmy... That's all I got. </p>
 <footer>
-Created by Hajime Inc. 
+Created by Jimmy Inc. 
 </footer>
 </body>
-<marquee> Hajime Inc. Stupid Crap since 2005  </marquee>
+<marquee> Jimmy Inc. Stupid Crap since 2005  </marquee>
 </html>
