--- a/student_16/AboutMe.html
+++ b/student_16/AboutMe.html
@@ -1,6 +1,9 @@
 <html>
 <head>
     <link rel = "stlesheet" type="text/css" href="mystyle.css">
+    <title>
+        YEET
+    </title>
 </head>
 <body>
 <header>
