--- a/student_26/about.html
+++ b/student_26/about.html
@@ -16,5 +16,8 @@
 <p>
  I am a black belt in Tae Kwon Do and almost a second degree. I like to go traveling bcause its always a cool experience.
 </p>
+<p>
+ Im 12 years old,and my birthday is September 25, 2006. My favorite restaurant is a Filipino restaurant called Jollibee.
+</p>
 </body>
-</html>
+</html> 
