--- a/student_13/about.html
+++ b/student_13/about.html
@@ -44,8 +44,8 @@
 <header>
 <a href= "/">
 <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_8thera8-VHBTEvitk9KuxyFvUEJg3HcwUP1d_3lnBD5uvLPe "/>
-  img style="float left"; https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwj6loC956XgAhXjs1QKHccBDFkQjRx6BAgBEAU&url=https%3A%2F%2Fthehustle.co%2Ffortnite-tencent-epic-games%2F&psig=AOvVaw3zjGOc5ZMzt4tWcJm6__uM&ust=1549497836662045/"
-</a>
+  img style="float left"; 
+  </a>
 <h1> Get Free V-Bucks Here </h1>
 </header>
 <nav>
