--- a/student_14/about.html
+++ b/student_14/about.html
@@ -5,7 +5,7 @@
 <body>
 <header>
   <a href = "/">
-   <img src = "https://images-na.ssl-images-amazon.com/images/I/91oJ29HKPtL._SL1500_.jpg"
+   <img src = "https://images-na.ssl-images-amazon.com/images/I/91oJ29HKPtL._SL1500_.jpg">
   </a>
   <h1> Welcome... I guess... </h1>
 </header>
@@ -18,7 +18,7 @@
     <li><a href = "contact.html"> Contact Us </a></li>
   </ul>
   </nav>
-  <p> Hey! I'm Jimmy... That's all I got. </p>
+  <p> Hey! I'm Jimmy... That's all I got. Welp, there's nothing to see here, you should leave now... if you're still reading, there's nothing more to see. </p>
 <footer>
 Created by Jimmy Inc. 
 </footer>
