--- a/student_09/boutme.html
+++ b/student_09/boutme.html
@@ -7,7 +7,7 @@
   <body>
 <h1>About me<h1>
 <img style= "float:left;" src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYHqP7QQOTIc7m2BzOqwwAJI6ZiJpXxJFyhMRgJDlPYMZ2z5wGmw">
-<p style= "float:right;" >Hello, my name is Maryam.On the left you can see a picture of me. I am an alien sent to earth to study earthlings.I am currently pretending to be twelve and attending a middle school in America. My favorite color is blue and I like sushi. I like astronomy and hope to be an astronaut when I grow up.</p>
+<p>Hello, my name is Maryam.On the left you can see a picture of me. I am an alien sent to earth to study earthlings.I am currently pretending to be twelve and attending a middle school in America. My favorite color is blue and I like sushi. I like astronomy and hope to be an astronaut when I grow up.</p>
 </body>
   </html>
 
