--- a/student_28/about.html
+++ b/student_28/about.html
@@ -57,7 +57,7 @@
 
   <br><br>
 
-  <p>howdy manne i cant sniff ,':l i wanna go skate. bye!</p>
+  <p>howdy manne i cant sniff ,':l i wanna go skate. bye!<font size="100"></p>
 
 </body>
 
