--- a/student_17/about.html
+++ b/student_17/about.html
@@ -71,7 +71,10 @@ I have nohing to tell you about me because people can hack my personal info. so 
   </div>
   <div class="column right" style="background-color:#bbb;">
     <h2>Column 2</h2>
-    <p></p>
+    <p>
+Hey my name is what it said last time and i dont like repating myself have this text.
+	    <img src = "https://www.fmylife.com/img/8475a1f765ed5cd942a80443b599f5b2.jpeg/facebook">
+	  </p>
   </div>
 </div>
 
