--- a/student_14/about.html
+++ b/student_14/about.html
@@ -5,7 +5,8 @@
 <body>
 <header>
   <a href = "/">
-   <img src = "https://images-na.ssl-images-amazon.com/images/I/91oJ29HKPtL._SL1500_.jpg">
+   <img style="float left; width:20%" src = "https://images-na.ssl-images-amazon.com/images/I/91oJ29HKPtL._SL1500_.jpg">
+   img style="float left; width:20%
   </a>
   <h1> Welcome... I guess... </h1>
 </header>
