--- a/student_16/AboutMe.html
+++ b/student_16/AboutMe.html
@@ -13,6 +13,9 @@
          <img scr = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjW8fvo_vDfAhVollQKHTFPBSgQjRx6BAgBEAU&url=https%3A%2F%2Fknowyourmeme.com%2Fmemes%2Fyeet&psig=AOvVaw12xFYOoXd1CHGScQQLBO6g&ust=1547683046693926"
   </a>
   <h1> The Lit Boii Meme Yeet Oof LOL </h1>
+      <p> MEMES ARE GOOD!!! subscribe to pewdiepie and also im a fortnite god 1v1 me scrub.............. ok this is akuard... Im Damian Michael Hernandez and i play fortnite, PUBG, clash royale and other things
+      YEEEEEEEEEEEEET!!! i like Game design and im in 8th... i hope 
+      </p>
 </header>
 <nav>
   <ul>
