--- a/student_28/about.html
+++ b/student_28/about.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<img src="https://www.gannett-cdn.com/presto/2018/12/26/USAT/89562d29-b653-477e-b702-b718787b75ac-sniffles2.jpg?width=534&height=712&fit=bounds&auto=webp" alt="REEEEEEEEE" height="500" width="1000">
+<img style="float:left;" src="https://www.gannett-cdn.com/presto/2018/12/26/USAT/89562d29-b653-477e-b702-b718787b75ac-sniffles2.jpg?width=534&height=712&fit=bounds&auto=webp" alt="REEEEEEEEE" height="500" width="1000">
 
 
 
