--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -67,7 +67,7 @@ h1 {
 <IMG src="https://media1.tenor.com/images/ff2a48177c879bfc7d7f4bd9cda4d66c/tenor.gif?itemid=12812683" width=500 height=500 align=left border=10px>
 </div>
  <font size=5>
- <h1>Hello there!</h1>
+ <h1>About Me</h1>
  </font>
 <font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
  <font color=black>
