--- a/student_16/AboutMe.html
+++ b/student_16/AboutMe.html
@@ -13,7 +13,7 @@
   </a>
   <h1> The Lit Boii Meme Yeet Oof LOL </h1>
       <p> MEMES ARE GOOD!!! subscribe to pewdiepie and also im a fortnite god 1v1 me scrub.............. ok this is akuard... Im Damian Michael Hernandez and i play fortnite, PUBG, clash royale and other things
-      YEEEEEEEEEEEEET!!! i like Game design and im in 8th... i hope 
+      YEEEEEEEEEEEEET!!! i like Game design and im in 8th... i hope i graduate sooooo yeah i guess...lol
       </p>
 </header>
 <nav>
