--- a/student_15/about.html
+++ b/student_15/about.html
@@ -67,7 +67,7 @@ This is my favorite video <a href= "http://www.youtube.com/watch?v=HCckoploKxg">
   </div>
   <div class="column right" style="background-color:#bbb;">
     <h2>Column 2</h2>
-    <p>Anoher wassap I dunno wa else to se</p>
+    <p>Amazing</p>
   </div>
 </div>
 
