--- a/student_26/about.html
+++ b/student_26/about.html
@@ -19,5 +19,8 @@
 <p>
  Im 12 years old,and my birthday is September 25, 2006. My favorite restaurant is a Filipino restaurant called Jollibee.
 </p>
+<p>
+ My favorite color is green. I like to watch YouTube. 
+</p>
 </body>
 </html> 
