--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -64,7 +64,7 @@ h1 {
     </style>
     </head>
  <font color=black>
-<IMG src="https://media1.tenor.com/images/ff2a48177c879bfc7d7f4bd9cda4d66c/tenor.gif?itemid=12812683" width=500 height=500 align=left border=10px>
+<IMG src="https://media1.tenor.com/images/ff2a48177c879bfc7d7f4bd9cda4d66c/tenor.gif?itemid=12812683" width=34% height=500 align=left border=10px>
 </div>
  <font size=5>
  <h1>About Me</h1>
