--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -1,7 +1,7 @@
 <! DOCTYPE html>
 <html>
 <head>
-<title> About Me </title>
+<title> Ibrahim Ahmed </title>
 	<link href='https://fonts.googleapis.com/css?family=Architects Daughter' rel='stylesheet'>
     <style>
 h1{
