--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -14,7 +14,7 @@ h1{
 	margin: 55 px;
 }
         body{
-	background-image: url("https://tenor.com/4ENk.gif");
+	background-image: url("https://tenor.com/view/gif-13464116");
 	border-style: dashed;
 	border-width: 20px;
 	border-color: green;
