--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -14,7 +14,7 @@ h1{
 	margin: 55 px;
 }
         body{
-	background-image: url("https://tenor.com/view/gif-13464116");
+	background-image: url("https://media1.tenor.com/images/1c50439c37639b80f4555b0ad66d4c74/tenor.gif?itemid=13464116");
 	border-style: dashed;
 	border-width: 20px;
 	border-color: green;
