--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -15,6 +15,9 @@ h1{
 }
         body{
 	background-image: url("https://media1.tenor.com/images/1c50439c37639b80f4555b0ad66d4c74/tenor.gif?itemid=13464116");
+		background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center; 
 	border-style: dashed;
 	border-width: 20px;
 	border-color: green;
