--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -14,14 +14,17 @@ h1{
 	margin: 55 px;
 }
         body{
-	background-image: url("https://media1.tenor.com/images/1c50439c37639b80f4555b0ad66d4c74/tenor.gif?itemid=13464116");
-	background-repeat: no-repeat;
-  	background-attachment: fixed;
- 	background-position: center; 
 	border-style: dashed;
 	border-width: 20px;
 	border-color: green;
         font-family: 'Architects Daughter';
+}
+	    html { 
+  background: url(images/bg.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 .my_div {
   background-color: red;
