--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -20,7 +20,7 @@ h1{
         font-family: 'Architects Daughter';
 }
 	    html { 
-  background: url(images/bg.jpg) no-repeat center center fixed; 
+  background: url(https://media1.tenor.com/images/1c50439c37639b80f4555b0ad66d4c74/tenor.gif?itemid=13464116) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
