--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -14,6 +14,8 @@ h1{
 	margin: 55 px;
 }
         body{
+	height: 100%;
+	width: 100%;
 	border-style: dashed;
 	border-width: 20px;
 	border-color: green;
