--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -4,6 +4,14 @@
 <title> Ibrahim Ahmed </title>
 	<link href='https://fonts.googleapis.com/css?family=Architects Daughter' rel='stylesheet'>
     <style>
+	    html {
+ 	 height: 100%;
+	width: 100%;
+}
+	body {
+  	min-height: 100%;
+	min-width: 100%
+}
 h1{
 	border-style: solid;
 	border-color: red;
