--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -12,6 +12,7 @@
   	min-height: 100%;
 	min-width: 100%
 }
+	    
 h1{
 	border-style: solid;
 	border-color: red;
@@ -36,6 +37,10 @@ h1{
   -o-background-size: cover;
   background-size: cover;
 }
+	    img {
+	 width: 45%;
+	 height:15%;
+	    }
 .my_div {
   background-color: red;
   	width:270px;
