--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -88,7 +88,7 @@ h1 {
  <h1>About Me</h1>
  </font>
  <font color=black>
-<IMG src="https://media1.tenor.com/images/ff2a48177c879bfc7d7f4bd9cda4d66c/tenor.gif?itemid=12812683" width=45% height=55% align=left border=10px>
+<IMG src="https://media1.tenor.com/images/ff2a48177c879bfc7d7f4bd9cda4d66c/tenor.gif?itemid=12812683" align=left border=10px>
 </div>
 <font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
  <font color=black>
