--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -85,7 +85,7 @@ h1 {
     </style>
     </head>
  <font size=5>
- <h1>About Me</h1>
+ <h1>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspAbout Me</h1>
  </font>
  <font color=black>
 <IMG src="https://media1.tenor.com/images/ff2a48177c879bfc7d7f4bd9cda4d66c/tenor.gif?itemid=12812683" align=left border=10px>
