--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -85,12 +85,12 @@ h1 {
     </style>
     </head>
  <font size=5>
- <h1>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspAbout Me</h1>
+	 <center><h1>About Me</h1></center>
  </font>
  <font color=black>
 <IMG src="https://media1.tenor.com/images/ff2a48177c879bfc7d7f4bd9cda4d66c/tenor.gif?itemid=12812683" align=left border=10px>
 </div>
-<font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
+<br><font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
  <font color=black>
 <body>
 <font size=5>
