--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -29,6 +29,7 @@ h1{
 	border-width: 20px;
 	border-color: green;
         font-family: 'Architects Daughter';
+		font-size: 100%;
 }
 	    html { 
   background: url(https://media1.tenor.com/images/1c50439c37639b80f4555b0ad66d4c74/tenor.gif?itemid=13464116) no-repeat center center fixed; 
