--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -29,7 +29,6 @@ h1{
 	border-width: 20px;
 	border-color: green;
         font-family: 'Architects Daughter';
-		font-size: 100%;
 }
 	    html { 
   background: url(https://media1.tenor.com/images/1c50439c37639b80f4555b0ad66d4c74/tenor.gif?itemid=13464116) no-repeat center center fixed; 
@@ -42,6 +41,15 @@ h1{
 	 width: 45%;
 	 height:60%;
 	    }
+	    .img-with-text {
+    text-align: justify;
+    width: [45%];
+}
+
+.img-with-text img {
+    display: block;
+    margin: 0 auto;
+}
 .my_div {
   background-color: red;
   	width:270px;
@@ -91,7 +99,7 @@ h1 {
  <font color=black>
 <IMG src="https://media1.tenor.com/images/ff2a48177c879bfc7d7f4bd9cda4d66c/tenor.gif?itemid=12812683" align=left border=10px>
 </div>
-<br><font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
+<div class="img-with-text"> <img src="yourimage.jpg" alt="sometext" /> <p><font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font></p> </div>
  <font color=black>
 <body>
 <font size=5>
