--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -97,9 +97,8 @@ h1 {
 	 <center><h1>About Me</h1></center>
  </font>
  <font color=black>
-<IMG src="https://media1.tenor.com/images/ff2a48177c879bfc7d7f4bd9cda4d66c/tenor.gif?itemid=12812683" align=left border=10px>
 </div>
-<div class="img-with-text"> <img src="yourimage.jpg" alt="sometext" /> <p><font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font></p> </div>
+<div class="img-with-text"> <img src="https://media1.tenor.com/images/ff2a48177c879bfc7d7f4bd9cda4d66c/tenor.gif?itemid=12812683" align=left border=10px alt="sometext" /> <p><font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font></p> </div>
  <font color=black>
 <body>
 <font size=5>
