--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -98,7 +98,13 @@ h1 {
  </font>
  <font color=black>
 </div>
-<div class="img-with-text"> <img src="https://media1.tenor.com/images/ff2a48177c879bfc7d7f4bd9cda4d66c/tenor.gif?itemid=12812683" align=left border=10px alt="sometext" /> <p><font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font></p> </div>
+<div class="img-with-text"> <img src="https://media1.tenor.com/images/ff2a48177c879bfc7d7f4bd9cda4d66c/tenor.gif?itemid=12812683" align=left border=10px alt="sometext" /> <p><font size="10" color="green">I am a math, science, and history major, and I study at Roosevelt Middle School. I am now trying to get my fourth PhD, which is in English, even if it ain't easy. Currently, as a 7th grader in Roosevelt Middle School, my classes are: <ol> P.E.,
+		     English,
+		     Band,
+		     History,
+		     Robotics,
+		     Math, and
+		Science </ol></p> </div>
  <font color=black>
 <body>
 <font size=5>
