--- a/student_15/gallery.html
+++ b/student_15/gallery.html
@@ -9,16 +9,7 @@
   </a>
   <h1> Your Best Dream </h1>
 </header>
-<nav>
-  <ul>
-    <li><a href = "index.html"> Home </a></li>
-    <li><a href = "Gallery"> Gallery </a></li>
-    <li><a href = "About Me"> About Us </a></li>
-    <li><a href = Contact Us"> Contact Us </a></li>
-  </ul>
-</nav>
-<footer>
-This was creatd by Hank.inc a Pineapple on Pizza Company
-</footer>
-</body>
+ <a href = "/">
+    <img src = "https://bpb.opendns.com/b/https/www.facebook.com/Disney/">
+  </a>
 </html>
