--- a/student_28/gallery.html
+++ b/student_28/gallery.html
@@ -81,7 +81,7 @@
       <h3>Javascript</h3>
 
       <img src="https://udemy-images.udemy.com/course/750x422/495484_385c_3.jpg"/>
-
+      <img src="https://t2.rbxcdn.com/e67b01fd2ea6fd516e3a7ec9cfe11294"/>
       <p> Javascript</p>
 
     </div>
