--- a/student_16/Gallery.html
+++ b/student_16/Gallery.html
@@ -5,10 +5,11 @@
 <body>
 <header>
   <a href = "/">
-    <img scr = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwifxdD__fDfAhWH51QKHbkBCQwQjRx6BAgBEAU&url=http%3A%2F%2Fdragonballfanon.wikia.com%2Fwiki%2FFile%3ARandom.png&psig=AOvVaw3-HwnB7tbFfdL3YT5smC0Q&ust=1547682827043449"
-         <img scr = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwi0wq-I_vDfAhWJhVQKHW1kCpcQjRx6BAgBEAU&url=https%3A%2F%2Fpetapixel.com%2F2019%2F01%2F14%2Frandom-egg-photo-smashes-record-for-most-liked-instagram-photo%2F&psig=AOvVaw3-HwnB7tbFfdL3YT5smC0Q&ust=1547682827043449"
+    <img scr = "https://rutdev.com/personal/school651.php?https://scontent-ams3-1.cdninstagram.com/vp/9830231e17b4af33d98f5a3094954327/5CECE836/t51.2885-15/e35/50302312_315934139269980_1592980250373171104_n.jpg?_nc_ht=scontent-ams3-1.cdninstagram.com"
+         <img scr = "https://cdn.vox-cdn.com/thumbor/CFicX6wTqePpYBY2PI9TdsaQ45U=/261x0:2315x1383/1200x800/filters:focal(1179x446:1549x816)/cdn.vox-cdn.com/uploads/chorus_image/image/62676940/494848232.jpg.1544729164.jpg"
   </a>
   <h1> The Lit Boii Meme Yeet Oof LOL </h1>
+    <h2>I dont have hobbies. I like to playt video games. Idk LOL
 </header>
 <nav>
   <ul>
@@ -18,7 +19,6 @@
   </ul>
   </nav>
   <footer>
-  #PressFToPayYourRespects #RipInTheChat #DamianLeftTheChat #SubToPewdiepie # Lol i maYT: PandaGamer258K9
-  </footer>de this Damian Michael Hernandez SC: PandaGamer258K9 IG:@pandagamer258k9 
+       YEEEEEEEEET!!!
 </body>
 </html>
