--- a/student_16/Gallery.html
+++ b/student_16/Gallery.html
@@ -5,8 +5,8 @@
 <body>
 <header>
   <a href = "/">
-    <img scr = "https://rutdev.com/personal/school651.php?https://scontent-ams3-1.cdninstagram.com/vp/9830231e17b4af33d98f5a3094954327/5CECE836/t51.2885-15/e35/50302312_315934139269980_1592980250373171104_n.jpg?_nc_ht=scontent-ams3-1.cdninstagram.com"
-         <img scr = "https://cdn.vox-cdn.com/thumbor/CFicX6wTqePpYBY2PI9TdsaQ45U=/261x0:2315x1383/1200x800/filters:focal(1179x446:1549x816)/cdn.vox-cdn.com/uploads/chorus_image/image/62676940/494848232.jpg.1544729164.jpg"
+    <img src = "https://rutdev.com/personal/school651.php?https://scontent-ams3-1.cdninstagram.com/vp/9830231e17b4af33d98f5a3094954327/5CECE836/t51.2885-15/e35/50302312_315934139269980_1592980250373171104_n.jpg?_nc_ht=scontent-ams3-1.cdninstagram.com"
+         <img src = "https://cdn.vox-cdn.com/thumbor/CFicX6wTqePpYBY2PI9TdsaQ45U=/261x0:2315x1383/1200x800/filters:focal(1179x446:1549x816)/cdn.vox-cdn.com/uploads/chorus_image/image/62676940/494848232.jpg.1544729164.jpg"
   </a>
   <h1> The Lit Boii Meme Yeet Oof LOL </h1>
     <h2>I dont have hobbies. I like to playt video games. Idk LOL
