--- a/student_24/about.html
+++ b/student_24/about.html
@@ -18,7 +18,7 @@
   </ul>
 </nav>
 <img src="https://images.pexels.com/photos/59523/pexels-photo-59523.jpeg?cs=srgb&dl=animal-cute-animals-dog-59523.jpg&fm=jpg">
-<p>
+<p style="float:left;">
 My name is Andre Avakian. My favorite games are Black os 4 and Fortnite. My favortite foods are pizza and hamburgers. 
 My favorite hobbies are playing video games, robotics and coding. My favorte youtube channel is AliA. My favorite car is a lamborini.
 My favorite streamer for fortnite is Tfue.
