--- a/student_08/About.html
+++ b/student_08/About.html
@@ -17,6 +17,11 @@
     <li><a href = "contact.html"> Contact Us </a></li>
   </ul>
 </nav>
+    <l>https://cdn1-www.cattime.com/assets/uploads/gallery/bombay-cats-and-kittens/bombay-cats-and-kittens-1.jpg</l>
+    <p>Hi, My name is Dreake Atticus Kalmbach. I like to to play games of any sort and look at videos on my phone, mostly videos of products from the website called Vat19.com. They have a lot of cool things like the worlds largest gummy worm or bear.
+ But to continue, i also have green eyes. Fact: Green eyes are the rarest eyes in the world, 2% of the worlds population has it. I have dimples on my shoulders, and i like to usually be alone. I like rainy days, its calm, you see the water drip down, and you can here the sounds.
+        Sometimes its nice to have a pet around so i have a pet cat named "Roobie", or "Root Beer". My moms friend Trish found her, or her son Ben but i cant remember the name. They heard cries from the other side of a fence in Grithith Park, so they sent Ben. He found a Black cat baby with patches of fur missing. So they took care of her. The cat couldnt live well there because the dogs there dont like her.
+        So my Mom got super exited and went to her house and adopted the cat, we took here to the vet, got her shots, got her toys and food, and took her home. She is identified as a bombay, she is a nice, curious, playful, and fast cat. She can also jump high and well and can also climb. She is 1 foot long (i think) and is about 1 year old. Bombays live up to 14 - 16 years so we'll have her around long enough. My Mom is a serious cat lover, she has cat statues (about 3) and loves them. </p>
 <footer>
 Created by Me!
 </footer>
