--- a/student_02/gallery.html
+++ b/student_02/gallery.html
@@ -11,6 +11,7 @@
 <h1> Gallery </h1>
 </header>
  <img src="https://cdn.apartmenttherapy.info/image/fetch/f_auto,q_auto,w_600,h_750,c_fit,fl_strip_profile/https://s3.amazonaws.com/pixtruder/original_images/0e4260caec5963da12006af68a553ae6aad43fc1" height=45% width=15% align=left border=10px/>
+    <p> I am fat</p>
 <nav>
 <ul>
 <li><a href = "index.html"> Home </li> 
