--- a/student_28/gallery.html
+++ b/student_28/gallery.html
@@ -96,7 +96,7 @@
 
       <img src="https://t2.rbxcdn.com/e67b01fd2ea6fd516e3a7ec9cfe11294"/>
       
-      <p> Javascript</p>
+      <p> Mom</p>
 
     </div>
 
