--- a/student_16/Gallery.html
+++ b/student_16/Gallery.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 </head>
-    <link rel = "stlesheet" type="text/css" href="mystyle.css"/a>
+    <link rel = "stlesheet" type="text/css" href="mystyle.css">
 <body>
 <header>
   <a href = "/">
