--- a/student_09/gallery.html
+++ b/student_09/gallery.html
@@ -15,7 +15,7 @@
 <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-kCQKt79cwPg8l7xJqkEsaJG2q4lKicUSD1rpPHHqB1bGLN1J9g">
 <br>
 <br> 
-<img src = "https://tncc.edu/sites/default/files/styles/basic_page_featured_image/public/featured-images/math-emporium.jpg">
+<img style = "width:60;" src = "https://tncc.edu/sites/default/files/styles/basic_page_featured_image/public/featured-images/math-emporium.jpg">
 </h1>
 </body>
 </html>
