--- a/student_09/index.html
+++ b/student_09/index.html
@@ -11,7 +11,7 @@
 <nav>
   <ul>
     <li><a href = "home.html"> Home </a></li>
-    <li><a href = "about.html"> About Us </a></li>
+    <li><a href = "boutme.html"> About Us </a></li>
     <li><a href = "gallery.html"> Gallery </a></li>
     <li><a href = "contact.html"> Contact Us </a></li>
     <li><a href = "hi.html"> Some werid website i did </a></li>
