--- a/student_09/index.html
+++ b/student_09/index.html
@@ -14,7 +14,7 @@
     <li><a href = "boutme.html"> About Us </a></li>
     <li><a href = "gallery.html"> Gallery </a></li>
     <li><a href = "contact.html"> Contact Us </a></li>
-    <li><a href = "hi.html"> Some werid website i did </a></li>
+    <li><a href = "hi.html">Get to know me  </a></li>
   </ul>
 </nav>
 <h1>
@@ -25,8 +25,8 @@ If you want to see a Thanksgiving page <a href = "thanksgiving.html"> Press Me! 
 <h4>This is the <b>coolest</b> site ever! only if you didn't already know :) Which you should've :( </h4>
 <h5>So..... to see if you really are a bordy or not you have to take a test. Not Literary tho :) </h5>
 <h6>Raed this number 847.98765345789008760 * 107.6865678757869</h6>
-<h7>AHAAAA! I caught you. you read the entire thing didn't you ? you have dishonored us '-'. You should be ashamed. NOT!</h7>
-<h8>Congrats you have discovered your secret talent: Intillegance. I've got some too you know i could even spell it. I T see i can spell too</h8>
+<p1>AHAAAA! I caught you. you read the entire thing didn't you ? you have dishonored us '-'. You should be ashamed. NOT!</p1>
+<p2>Congrats you have discovered your secret talent: Intillegance. I've got some too you know i could even spell it. I T see i can spell too</p2>
 <footer>
 Created by Me!
 </footer>
