--- a/student_09/index.html
+++ b/student_09/index.html
@@ -27,8 +27,10 @@ If you want to see a Thanksgiving page <a href = "thanksgiving.html"> Press Me! 
 <h6>Raed this number 847.98765345789008760 * 107.6865678757869</h6>
 <p1>AHAAAA! I caught you. you read the entire thing didn't you ? you have dishonored us '-'. You should be ashamed. NOT!</p1>
 <p2>Congrats you have discovered your secret talent: Intillegance. I've got some too you know i could even spell it. I T see i can spell too</p2>
+<p3>Ok so basically (if you haven't figured it out yet) this is a website about me as a person and what i do if you like it great if you don't ohh well..... you probably just wasted like five to fifty minutes of your life there</p3>
 <footer>
 Created by Me!
 </footer>
 </body>
 </html>
+ 
