--- a/student_09/index.html
+++ b/student_09/index.html
@@ -15,21 +15,19 @@
     <li><a href = "gallery.html"> Gallery </a></li>
     <li><a href = "contact.html"> Contact Us </a></li>
     <li><a href = "hi.html">Get to know me  </a></li>
-  </ul>
+    <li><a href = "thanksgiving.html"> My thanksgiving page </a></li>
+ </ul>
 </nav>
-<h1>
-If you want to see a Thanksgiving page <a href = "thanksgiving.html"> Press Me! </a></li>
-</h1>
-<h2> poeple who are viewing this are poeple who have nothing to do ;) If you not Bored plz leave :I Totally bieng serious there</h2>
-<h3>Welcome bordies here you will learn about me a fellow memeber of your team :) but letting you know ....</h3>
-<h4>This is the <b>coolest</b> site ever! only if you didn't already know :) Which you should've :( </h4>
-<h5>So..... to see if you really are a bordy or not you have to take a test. Not Literary tho :) </h5>
-<h6>Raed this number 847.98765345789008760 * 107.6865678757869</h6>
+<h1> poeple who are viewing this are poeple who have nothing to do ;) If you not Bored plz leave :I Totally bieng serious there</h1>
+<h2>Welcome bordies here you will learn about me a fellow memeber of your team :) but letting you know ....</h2>
+<h3>This is the <b>coolest</b> site ever! only if you didn't already know :) Which you should've :( </h3>
+<h4>So..... to see if you really are a bordy or not you have to take a test. Not Literary tho :) </h4>
+<h5>Raed this number 847.98765345789008760 * 107.6865678757869</h5>
 <p1>AHAAAA! I caught you. you read the entire thing didn't you ? you have dishonored us '-'. You should be ashamed. NOT!</p1>
 <br>
-<p2>Congrats you have discovered your secret talent: Intillegance. I've got some too you know i could even spell it. I T see i can spell too</p2>
+<p2>Congrats you have discovered your secret talent: Intylliigance. I've got some too you know i could even spell it. I T see i can spell too</p2>
 <br>
-<p3>Ok so basically (if you haven't figured it out yet) this is a website about me as a person and what i do if you like it great if you don't ohh well..... you probably just wasted like five to fifty minutes of your life there</p3>
+<p3>Ok so basically (if you haven't figured it out yet) this is a website about me as a person and what i do if you like it great. if you don't too bad but guess what you probably just wasted like five to fifty minutes of your life here</p3>
 <footer>
 Created by Me!
 </footer>
