--- a/student_09/index.html
+++ b/student_09/index.html
@@ -22,7 +22,7 @@
 <h2>Welcome bordies here you will learn about me a fellow memeber of your team :) but letting you know ....</h2>
 <h3>This is the <b>coolest</b> site ever! only if you didn't already know :) Which you should've :( </h3>
 <h4>So..... to see if you really are a bordy or not you have to take a test. Not Literary tho :) </h4>
-<h5 <font size = "15">>Raed this number 847.98765345789008760 * 107.6865678757869</h5>
+<h5 <font size = "400">Raed this number 847.98765345789008760 * 107.6865678757869</h5>
 <p1>AHAAAA! I caught you. you read the entire thing didn't you ? you have dishonored us '-'. You should be ashamed. NOT!</p1>
 <br>
 <p2>Congrats you have discovered your secret talent: Intylliigance. I've got some too you know i could even spell it. I T see i can spell too</p2>
