--- a/student_09/index.html
+++ b/student_09/index.html
@@ -22,12 +22,12 @@
 <h2>Welcome bordies here you will learn about me a fellow memeber of your team :) but letting you know ....</h2>
 <h3>This is the <b>coolest</b> site ever! only if you didn't already know :) Which you should've :( </h3>
 <h4>So..... to see if you really are a bordy or not you have to take a test. Not Literary tho :) </h4>
-<h5 <font size = "400px"> dRaed this number 847.98765345789008760 * 107.6865678757869</h5>
-<p1>AHAAAA! I caught you. you read the entire thing didn't you ? you have dishonored us '-'. You should be ashamed. NOT!</p1>
+<p1>Raed this number 847.98765345789008760 * 107.6865678757869</p1>
+<p2>AHAAAA! I caught you. you read the entire thing didn't you ? you have dishonored us '-'. You should be ashamed. NOT!</p2>
 <br>
-<p2>Congrats you have discovered your secret talent: Intylliigance. I've got some too you know i could even spell it. I T see i can spell too</p2>
+<p3>Congrats you have discovered your secret talent: Intylliigance. I've got some too you know i could even spell it. I T see i can spell too</p3>
 <br>
-<p3>Ok so basically (if you haven't figured it out yet) this is a website about me as a person and what i do if you like it great. if you don't too bad but guess what you probably just wasted like five to fifty minutes of your life here</p3>
+<p4>Ok so basically (if you haven't figured it out yet) this is a website about me as a person and what i do if you like it great. if you don't too bad but guess what you probably just wasted like five to fifty minutes of your life here</p4>
 <footer>
 Created by Me!
 </footer>
