--- a/student_09/index.html
+++ b/student_09/index.html
@@ -22,10 +22,10 @@
 <h2>Welcome bordies here you will learn about me a fellow memeber of your team :) but letting you know ....</h2>
 <h3>This is the <b>coolest</b> site ever! only if you didn't already know :) Which you should've :( </h3>
 <h4>So..... to see if you really are a bordy or not you have to take a test. Not Literary tho :) </h4>
-<p1>Raed this number 847.98765345789008760 * 107.6865678757869</p1>
+<p1>Raed this number (plz do its easier than you think) 847.98768760 * 107.6865669</p1>
 <br>
  <br>
- <p2>AHAAAA! I caught you. you read the entire thing didn't you ? you have dishonored us '-'. You should be ashamed. NOT!</p2>
+ <p2>AHAAAA! I caught you. you read the entire thing didn't you ? Us bordies shall never follow what others tell us to do. you have dishonored us '-'. You should be ashamed. NOT!</p2>
 <br>
  <br>
 <p3>Congrats you have discovered your secret talent: Intylliigance. I've got some too you know i could even spell it. I T see i can spell too</p3>
