--- a/example/contact.html
+++ b/example/contact.html
@@ -58,7 +58,8 @@ What is your question? <br>
   <textarea name="message" rows="10" cols="30">
   </textarea><br>
   <br>
-  
+  <input type ="checkbox" name = "subscribe" value = "Subscribe">
+  <input type = "submit" value="Submit">
   </form>
 </body>
 </html>
