--- a/student_15/contact.html
+++ b/student_15/contact.html
@@ -1,24 +1,68 @@
 <html>
 <head>
-  <link rel= "Styleheet" type "txt/css" href= "mystyle.css">
+  <title> Contact Us</title>
 </head>
 <body>
-<header>
-  <a href = "/">
-    <img src = "https://img.buzzfeed.com/buzzfeed-static/static/2016-12/14/13/asset/buzzfeed-prod-fastlane01/sub-buzz-24232-1481739559-7.jpg">
-  </a>
-  <h1> Your Best Dream </h1>
-</header>
-<nav>
-  <ul>
-    <li><a href = "index.html"> Home </a></li>
-    <li><a href = "Gallery"> Gallery </a></li>
-    <li><a href = "About Me"> About Us </a></li>
-    <li><a href = Contact Us"> Contact Us </a></li>
-  </ul>
-</nav>
-<footer>
-This was creatd by Hank.inc a Pineapple on Pizza Company
-</footer>
+  <p> Contact us page!</p>
+</body>
+</html>
+-->
+<html>
+<head>
+  <link rel="stylesheet" type="text/css" href="mystyle.css">
+<title> Contact Us</title>
+</head>
+
+<body>
+
+
+  <div class="header">
+    <a href="example.html">
+    </a>
+    <h1>Contact Us</h1>
+
+  </div>
+    
+  <div>
+    <ul class= "nav">
+      
+      <li><a href = "example.html"> Home Page </a></li>
+      <li><a href = "about.html"> About Us </a></li>
+      <li><a href = "gallery.html"> Gallery </a></li>
+      <li><a href = "contact.html"> Contact Us </a></li>
+
+    </ul>
+  </div>
+  <br><br>
+  <br><br>
+<form>
+What is your question? <br>
+  <select name="topic">
+ 
+  <option value="hawaiian pizza">
+    Hawaiian Pizza
+    </option>
+  <option value="hwaiian pizza">
+    Hawaiian Pizza
+    </option>
+  <option value="cheeseburgr">
+    Cheesebuger
+  </option>
+  <option value="meme">
+    Meme
+  </option>
+  </select><br><br>
+  Full Name <br>
+  <input type="text" name="name"><br>
+  <br>
+  Email <br>
+  <input type="text" name="name"><br>
+  <br>
+  Message <br>
+  <textarea name="message" rows="10" cols="30">
+  </textarea><br>
+  <br>
+  
+  </form>
 </body>
 </html>
