--- a/student_16/Contact.html
+++ b/student_16/Contact.html
@@ -1,24 +1,60 @@
+<!--
 <html>
 <head>
+  <title> Contact Us</title>
 </head>
-    <link rel = "stlesheet" type="text/css" href="mystyle.css">
 <body>
-<header>
-  <a href = "/">
-    <img scr = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwifxdD__fDfAhWH51QKHbkBCQwQjRx6BAgBEAU&url=http%3A%2F%2Fdragonballfanon.wikia.com%2Fwiki%2FFile%3ARandom.png&psig=AOvVaw3-HwnB7tbFfdL3YT5smC0Q&ust=1547682827043449"
-         <img scr = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwi0wq-I_vDfAhWJhVQKHW1kCpcQjRx6BAgBEAU&url=https%3A%2F%2Fpetapixel.com%2F2019%2F01%2F14%2Frandom-egg-photo-smashes-record-for-most-liked-instagram-photo%2F&psig=AOvVaw3-HwnB7tbFfdL3YT5smC0Q&ust=1547682827043449"
-  </a>
-  <h1> The Lit Boii Meme Yeet Oof LOL </h1>
-</header>
-<nav>
-  <ul>
-   <li><a href = "index.html> Home(mes) </a></li>
-   <li><a href = "AboutMe.html> About Me(mes) </a></li>
-   <li><a href = "Gallery.html> Gallery </a></li>
-  </ul>
-  </nav>
-  <footer>
-  #PressFToPayYourRespects #RipInTheChat #DamianLeftTheChat #SubToPewdiepie # Lol i maYT: PandaGamer258K9
-  </footer>de this Damian Michael Hernandez SC: PandaGamer258K9 IG:@pandagamer258k9 
+  <p> Contact us page!</p>
+</body>
+</html>
+-->
+<html>
+<head>
+  <link rel="stylesheet" type="text/css" href="mystyle.css">
+<title> Contact Us</title>
+</head>
+
+<body>
+<h1>#PressFToPayYourRespects #RipInTheChat #DamianLeftTheChat #SubToPewdiepie # Lol i maYT: PandaGamer258K9 </footer>de this Damian Michael Hernandez SC: PandaGamer258K9 IG:@pandagamer258k9
+    </h1>
+  <div class="header">
+    <a href="example.html">
+    </a>
+    <h1>Contact Us</h1>
+
+  </div>
+    
+  <div>
+    <ul class= "nav">
+      
+      <li><a href = "example.html"> Home Page </a></li>
+      <li><a href = "about.html"> About Us </a></li>
+      <li><a href = "gallery.html"> Gallery </a></li>
+      <li><a href = "contact.html"> Contact Us </a></li>
+
+    </ul>
+  </div>
+  <br><br>
+  <br><br>
+<form>
+What is your question? <br>
+  <select name="topic">
+ 
+  <option value="pizza">
+    My gamertag
+    </option>
+  <option value="burrito">
+    Random stuff
+  </option>
+  </select><br><br>
+  Full Name <br>
+  <input type="text" name="name"><br>
+  <br>
+  Message <br>
+  <textarea name="message" rows="10" cols="30">
+  </textarea><br>
+  <br>
+  
+  </form>
 </body>
 </html>
