--- a/student_09/contact.html
+++ b/student_09/contact.html
@@ -27,8 +27,8 @@
   <div>
     <ul class= "nav">
       
-      <li><a href = "example.html"> Home Page </a></li>
-      <li><a href = "about.html"> About Us </a></li>
+      <li><a href = "home.html"> Home Page </a></li>
+      <li><a href = "boutme.html"> About Us </a></li>
       <li><a href = "gallery.html"> Gallery </a></li>
       <li><a href = "contact.html"> Contact Us </a></li>
 
