--- a/example/contact.html
+++ b/example/contact.html
@@ -59,6 +59,8 @@ What is your question? <br>
   </textarea><br>
   <br>
   <input type ="checkbox" name = "subscribe" value = "Subscribe">
+  Please add me to the mailing list!
+  <br><br>
   <input type = "submit" value="Submit">
   </form>
 </body>
