--- a/student_14/contact.html
+++ b/student_14/contact.html
@@ -21,10 +21,10 @@ What is your question? <br>
   <select name="topic">
  
   <option value="pizza">
-    Pizza
+    california rolls (boo)
     </option>
   <option value="burrito">
-    Burrito
+    SUSHI
   </option>
   </select><br><br>
   Full Name <br>
