--- a/student_17/contact.html
+++ b/student_17/contact.html
@@ -47,7 +47,7 @@ What is your question? <br>
   
   </form>
 <footer>
-Created by thatonedude zombs rOyavcle name
+Created by thatonedude zombs royavcle name
 </footer>
 </body>
 </html>
