--- a/student_09/contact.html
+++ b/student_09/contact.html
@@ -53,6 +53,10 @@ What is your question? <br>
   Full Name <br>
   <input type="text" name="name"><br>
   <br>
+   </select><br><br>
+  Email <br>
+  <input type="text" name="name"><br>
+  <br>
   Message <br>
   <textarea name="message" rows="10" cols="30">
   </textarea><br>
