--- a/student_16/Contact.html
+++ b/student_16/Contact.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<h1>#PressFToPayYourRespects #RipInTheChat #DamianLeftTheChat #SubToPewdiepie # Lol i maYT: PandaGamer258K9 </footer>de this Damian Michael Hernandez SC: PandaGamer258K9 IG:@pandagamer258k9
+<h1>#PressFToPayYourRespects #RipInTheChat #DamianLeftTheChat #SubToPewdiepie # Lol i made this Damian Michael Hernandez YT: PandaGamer258K9 SC: PandaGamer258K9 IG:@pandagamer258k9
     </h1>
   <div class="header">
     <a href="example.html">
