--- a/student_09/contact.html
+++ b/student_09/contact.html
@@ -53,7 +53,7 @@ What is your question? <br>
   Full Name <br>
   <input type="text" name="name"><br>
   <br>
-   </select><br><br>
+   </select><br>
   Email <br>
   <input type="text" name="name"><br>
   <br>
