--- a/student_15/contact.html
+++ b/student_15/contact.html
@@ -62,7 +62,10 @@ What is your question? <br>
   <textarea name="message" rows="10" cols="30">
   </textarea><br>
   <br>
-  
+  <input type ="checkbox" name = "subscribe" value = "Subscribe">
+  Please add me to the mailing list!
+  <br><br>
+  <input type = "submit" value="Submit"
   </form>
 </body>
 </html>
