--- a/student_17/contact.html
+++ b/student_17/contact.html
@@ -49,5 +49,10 @@ What is your question? <br>
 <footer>
 Created by thatonedude zombs royavcle name
 </footer>
+  <br>
+  <input type ="checkbox" name = "subscribe" value = "Subscribe">
+  Please add me to the mailing list!
+  <br><br>
+  <input type = "submit" value="Submit">
 </body>
 </html>
