--- a/student_16/Contact.html
+++ b/student_16/Contact.html
@@ -54,7 +54,10 @@ What is your question? <br>
   <textarea name="message" rows="10" cols="30">
   </textarea><br>
   <br>
-  
+   <input type ="checkbox" name = "subscribe" value = "Subscribe">
+  Submit so i can answer hopefully........i guess
+  <br><br>
+  <input type = "submit" value="Submit">
   </form>
 </body>
 </html>
