--- a/student_13/contact.html
+++ b/student_13/contact.html
@@ -29,10 +29,10 @@ What is your question? <br>
   <select name="topic">
  
   <option value="free v-bucks">
-    Pizza
+    free v-bucks
     </option>
   <option value="video games">
-    Burrito
+    video games
   </option>
   </select><br><br>
   Full Name <br>
