--- a/student_16/Contact.html
+++ b/student_16/Contact.html
@@ -40,11 +40,11 @@
 What is your question? <br>
   <select name="topic">
  
-  <option value="pizza">
-    My gamertag
+  <option value="GT">
+    My gamertag?
     </option>
-  <option value="burrito">
-    Random stuff
+  <option value="RS">
+    Random stuff to tell me
   </option>
   </select><br><br>
   Full Name <br>
