--- a/student_16/Contact.html
+++ b/student_16/Contact.html
@@ -55,7 +55,7 @@ What is your question? <br>
   </textarea><br>
   <br>
    <input type ="checkbox" name = "subscribe" value = "Subscribe">
-  Submit so i can answer hopefully........i guess
+  anonomus?
   <br><br>
   <input type = "submit" value="Submit">
   </form>
