--- a/student_14/contact.html
+++ b/student_14/contact.html
@@ -34,6 +34,11 @@ What is your question? <br>
   <textarea name="message" rows="10" cols="30">
   </textarea><br>
   <br>
+  <input type ="checkbox" name = "subscribe" value = "Subscribe">
+  Please add me to the mailing list!
+  <br><br>
+  <input type = "submit" value="Submit">
+  </form>
   
   </form>
 <footer>
