--- a/student_09/contact.html
+++ b/student_09/contact.html
@@ -15,11 +15,6 @@
 </head>
 
 <body>
-
-
-  <div class="header">
-    <a href="example.html">
-    </a>
     <h1>Contact Us</h1>
   <br><br>
   <br><br>
@@ -33,8 +28,8 @@ What is your question? <br>
   <option value="Website Making">
     Website Making
   </option>
-   <option value="other">
-    other
+   <option value="Other">
+    Other
   </option>
  </select><br><br>
   Full Name <br>
